--- a/articles/catalog.yml
+++ b/articles/catalog.yml
@@ -10,7 +10,10 @@ CHAPS:
   # 合同誌のメリット（執筆者観点）
   # 募集の方法
   # 編集長の心得（トラブル例と回避方法とかも）
-  # 環境設定（Gitとかリポジトリとか）
+  # 環境設定（Gitとかリポジトリとか）執筆者側？
+  # 合同誌を支える技術
+  - chap-tech-setup.re
+
   # スケジュールとバッファ
   # 権利やお金周りに関して
   # 打ち上げをしよう
@@ -20,7 +23,6 @@ CHAPS:
   - Chap-oyakata-EditorGitSetup.re
 
 APPENDIX:
-
   # こんな合同誌作りました。でどうだった？（体験談的に
 
 POSTDEF:
