--- a/articles/catalog.yml
+++ b/articles/catalog.yml
@@ -7,6 +7,7 @@ CHAPS:
   - chap-sample.re
 
   # 合同誌のメリット（主催者観点）
+  - chap-oyakata-intro.re
   # 合同誌のメリット（執筆者観点）
   # 募集の方法
   # 編集長の心得（トラブル例と回避方法とかも）
