--- a/articles/catalog.yml
+++ b/articles/catalog.yml
@@ -25,6 +25,8 @@ CHAPS:
   - Chap-oyakata-EditorGitSetup.re
   # hayashi追加　技術書典に社内部活動で参加する
   - chap-hayashi.re
+  # 技術書典に合同誌と分冊で出してみて
+  - chap-zukkey.re
 
 APPENDIX:
   # こんな合同誌作りました。でどうだった？（体験談的に
