--- a/articles/catalog.yml
+++ b/articles/catalog.yml
@@ -27,6 +27,7 @@ CHAPS:
   - chap-hayashi.re
   # 技術書典に合同誌と分冊で出してみて
   - chap-zukkey.re
+  - chap_gather_article.re
 
 APPENDIX:
   # こんな合同誌作りました。でどうだった？（体験談的に
