カタログ更新

--- a/articles/catalog.yml
+++ b/articles/catalog.yml
@@ -10,6 +10,7 @@ CHAPS:
   - chap-oyakata-intro.re
   # 合同誌のメリット（執筆者観点）
   # 募集の方法
+  - chap-bosyu.re
   # 編集長の心得（トラブル例と回避方法とかも）
   # 環境設定（Gitとかリポジトリとか）執筆者側？
   # 合同誌を支える技術
