--- a/articles/catalog.yml
+++ b/articles/catalog.yml
@@ -31,6 +31,7 @@ CHAPS:
   # 技術書典に合同誌と分冊で出してみて
   - chap-zukkey.re
   - chap_gather_article.re
+  - chap-niku.re
 
 APPENDIX:
   # こんな合同誌作りました。でどうだった？（体験談的に
