肉とセルフマージについて追記

--- a/articles/catalog.yml
+++ b/articles/catalog.yml
@@ -15,12 +15,16 @@ CHAPS:
   - chap_kokoroe.re
   # 環境設定（Gitとかリポジトリとか）執筆者側？
   # 合同誌を支える技術
-  - chap-tech-setup.re
+  # - chap-tech-setup.re
 
   # スケジュールとバッファ
   - chap-schedule.re
   # 権利やお金周りに関して
   - chap-money.re
+
+  # 肉肉野菜とかノールックマージについて
+  - chap-niku.re
+
   # 打ち上げをしよう
   # 商業化するときにどうするか
 
@@ -31,8 +35,7 @@ CHAPS:
   # 技術書典に合同誌と分冊で出してみて
   - chap-zukkey.re
   - chap_gather_article.re
-  - chap-niku.re
-
+ 
 APPENDIX:
   # こんな合同誌作りました。でどうだった？（体験談的に
 
