合同誌の体験談を追加(ichi_taro3)

--- a/articles/catalog.yml
+++ b/articles/catalog.yml
@@ -43,6 +43,7 @@ APPENDIX:
   # こんな合同誌作りました。でどうだった？（体験談的に
   - chap-appendix-killinsun.re
   - chap-appendix-mzryuka.re
+  - chap-appendix-ichitaro3.re
 
 POSTDEF:
   # あとがき
