合同誌の体験談を追加(himarin269)

--- a/articles/catalog.yml
+++ b/articles/catalog.yml
@@ -45,6 +45,7 @@ APPENDIX:
   - chap-appendix-mzryuka.re
   - appendix-kobara.re
   - chap-appendix-ichitaro3.re
+  - chap-appendix-himarin269.re
 
 POSTDEF:
   # あとがき
