--- a/articles/catalog.yml
+++ b/articles/catalog.yml
@@ -5,7 +5,7 @@ PREDEF:
 CHAPS:
   # 各自書きたい内容とファイル名を追加していく
 
-  - Chap-intro0.re
+  - chap-intro0.re
   # 合同誌のメリット（主催者観点）
   - chap-oyakata-intro.re
   # 合同誌のメリット（執筆者観点）
