--- a/articles/catalog.yml
+++ b/articles/catalog.yml
@@ -46,6 +46,7 @@ APPENDIX:
   - appendix-kobara.re
   - chap-appendix-ichitaro3.re
   - chap-appendix-himarin269.re
+  - chap-appendix-rubys8arks.re
 
 POSTDEF:
   # あとがき
