--- a/articles/catalog.yml
+++ b/articles/catalog.yml
@@ -47,6 +47,7 @@ APPENDIX:
   - chap-appendix-ichitaro3.re
   - chap-appendix-himarin269.re
   - chap-appendix-rubys8arks.re
+  - appendix-mikodayo.re
 
 POSTDEF:
   # あとがき
